# noCTF

./: .dockerignore  .env.dev  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  build-images.sh  cloudbuild.yaml  create-database.mjs  dev-tmux.sh  dev.sh  docker-compose-build.yml  docker-compose.deploy.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  docusaurus.config.ts  eslint.config.mjs  kysely.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs
.github/workflows/: build-docker.yml  pull_request.yaml  push.yaml  test-pr.yaml  test-push.yaml  test.yaml
.moon/cache/: ciReport.json  runReport.json
apps/backend/: package.json
apps/docs/: package-lock.json  package.json
apps/migrator/: kysely.config.ts  package.json  tsconfig.json
apps/server/: .gitignore  esbuild.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/: eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json
core/api/: build.ts  package.json  tsconfig.json
core/api-client/: package.json
core/interfaces/: package.json
core/mod-auth/: package.json  tsconfig.json
core/mod-captcha/: package.json
core/mod-setup/: package.json
core/mod-team/: package.json
core/mod-tickets/: package.json  vitest.config.ts
core/openapi-spec/: package.json  tsconfig.json
core/plugin-auth/: package.json
core/plugin-captcha/: package.json
core/plugin-setup/: package.json
core/schema/: .gitignore  .kysely-codegenrc.json  package.json
core/server-api/: package.json  tsconfig.json
core/server-core/: package.json  tsconfig.json  vitest.config.ts
core/services/: package.json
dev/: postgres_init.sql
docs/: acknowledgements.md  intro.md  issues.md  quick-start.md
migrations/: 1728179364677_config.ts  1728179364677_user.ts  1728563191178_user.ts  1728569749520_team.ts  1733572089385_audit_log.ts  1733649797783_division.ts  1733649797783_ticket.ts  1733650351430_challenge.ts  1733650351430_challenge_submission.ts  1733850343039_submission.ts  1733999722445_division.ts  1733999722445_ticket.ts  1741472210283_scoring.ts  1744115051874_team_tag.ts  1744281954832_file_session_lock.ts  1744281954832_session_and_lock.ts  1752615351508_announcement.ts  util.ts
scripts/: ci.sh  get-dependents
tools/noctfcli/: .gitignore  README.md  noctf.yaml.schema.json  pyproject.toml
tools/noctfcli/src/noctfcli/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  preprocessor.py  utils.py  validator.py
tools/noctfcli/src/noctfcli/commands/: common.py  delete.py  list_cmd.py  show.py  update.py  upload.py  validate.py
tools/noctfcli/src/noctfcli/schema/: noctf.yaml.schema.json
(+561 files in other folders)
